2005-04-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU inetlib:

	2005-04-21  Casey Marshall <csm@gnu.org>

        * gnu/java/security/der/DERValue.java
        (getValueAs): new method.
        * gnu/java/security/x509/ext/PrivateKeyUsagePeriod.java
        (<init>): read both dates with 'DERValue.getValueAs', with
        'GENERALIZED_TIME' as the argument.

2005-04-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU inetlib:

	2005-04-20  Roman Kennke  <roman@kennke.org>

        * javax/swing/plaf/basic/BasicLookAndFeel.java
        (initComponentDefaults): Changed Button.border to be
        BasicBorders.getButtonBorder as it should be.

2005-04-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU inetlib:

	2005-04-20  Roman Kennke  <roman@kennke.org>

        * javax/swing/plaf/basic/BasicTabbedPaneUI.java:
        (getMaximumSize): Return (Short.MAX_VALUE, Short.MAX_VALUE) as it
        should according to a mauve testcase, instead of the preferred
        size.

2005-04-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU inetlib:

	2005-04-20  Robert Mitchell  <mitchelr@ipfw.edu>

        * IMAPConnection.java: Avoid NullPointerException when the server
        returns no matches.

2005-04-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath:

	2005-04-20  Sven de Marothy  <sven@physto.se>

        * java/io/OutputStreamWriter.java:
        (close): Do nothing on multiple closes.

2005-04-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath:

	2005-04-20  Roman Kennke  <roman@kennke.org>

        * javax/swing/JMenu.java
        (add): add(Component) now calls PopupMenu.insert(..) instead of
        PopupMenu.add(..). add(..) is not implemented for Component,
        so JComponent.add(..) is called instead, adding the component
        in the wrong place.

2005-04-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath:

	2005-04-20  Roman Kennke  <roman@kennke.org>
